adding a few additional capabilities to rules.
1. Allows descriptions to contain python string interpolation. The
interpolated keys should come from the matching event tags, they are
replaced by the tag values from the evet.

2. Adds the ability to detect streams that are no longer producing any
events. The modifiers hash can now take a boolean :watch-events (which
defaults to false). It also takes a :ttl value which decides how long
after the last event it should raise an alarm.

3. Adds the ability to group rules by arbitrary event tags. A ":by
:tag" in the modifiers hash will now group events by that value.

4. We drop events/metrics we don't care about in any of the rules, the
previous setup pushed a small percentage of these to the local
elasticsearch and it wasn't able to keep up. We now only push events
from streams we care about into the local elasticsearch.

--- a/riemann.config
+++ b/riemann.config
@@ -39,15 +39,28 @@
   (opentsdb-server (assoc option-map :parser-fn opentsdb-parser)))
 
 ; Expire old events from the index every 5 seconds.
-(periodically-expire 5)
+(periodically-expire 30 {:keep-keys [:host
+                                     :metric-name
+                                     :service
+                                     :service-status
+                                     :service-description
+                                     :rule-id]})
 
 (def index (riemann.config/index))
+(def watcher-streams (atom []))
 
 (require '[robinhood.consumers.all :as consumers]
          'robinhood.tests.all)
 
 (let [consumer-streams (flatten (doall consumers/all-streams))
       combined-stream (apply sdo consumer-streams)
+      interesting-metrics (set (flatten consumers/interesting-metrics))
+      log-extraneous-event-count (fixed-time-window
+                                  60
+                                  (smap folds/count
+                                        #(log-warning
+                                          (str "Got " (:metric %)
+                                               " extraneous events in the last 60 seconds."))))
       log-expired-count (fixed-time-window
                          60
                          (smap folds/count
@@ -55,12 +68,16 @@
                                  (str "Got " (:metric %)
                                       " expired events in the last 60 seconds."))))]
   (log-info (str "Filtering events through " (count consumer-streams) " streams."))
+  (log-info (str "We are only interested in " (count interesting-metrics)
+                 " metrics types, the rest are extraneous."))
   (streams
-   (default :ttl (rh_config "default_ttl")
-     (where* expired?
-             (where* #(not= "expired" (:state %))
-                     log-expired-count)
-             (else combined-stream
-                   (with :es-log-probability (rh_config "es_log_probability" 0.5)
-                         (test/io push-to-es)))))))
+   (where* expired?
+           (where* #(not= "expired" (:state %))
+                   log-expired-count
+                   (else
+                    (apply sdo @watcher-streams)))
+           (else
+            (where* #(contains? interesting-metrics (:metric-name %))
+                    combined-stream
+                    (else log-extraneous-event-count))))))
 
