:by can take arbitrary tags, :dead stream detection and fixes.

--- a/riemann.config
+++ b/riemann.config
@@ -38,16 +38,15 @@
   (repl-server     option-map)
   (opentsdb-server (assoc option-map :parser-fn opentsdb-parser)))
 
-; Expire old events from the index every 5 seconds.
-(periodically-expire 30 {:keep-keys [:host
-                                     :metric-name
-                                     :service
-                                     :service-status
-                                     :service-description
-                                     :rule-id]})
-
 (def index (riemann.config/index))
 (def watcher-streams (atom []))
+(def keep-list [:host
+                :metric-name
+                :roles
+                :rule-id
+                :service
+                :service-status
+                :service-description])
 
 (require '[robinhood.consumers.all :as consumers]
          'robinhood.tests.all)
@@ -67,17 +66,25 @@
                                #(log-warning
                                  (str "Got " (:metric %)
                                       " expired events in the last 60 seconds."))))]
+
   (log-info (str "Filtering events through " (count consumer-streams) " streams."))
   (log-info (str "We are only interested in " (count interesting-metrics)
                  " metrics types, the rest are extraneous."))
+
+  ; Expire old events from the index every 5 seconds.
+  (periodically-expire 30 {:keep-keys keep-list})
+
   (streams
-   (where* expired?
-           (where* #(not= "expired" (:state %))
-                   log-expired-count
-                   (else
-                    (apply sdo @watcher-streams)))
-           (else
-            (where* #(contains? interesting-metrics (:metric-name %))
-                    combined-stream
-                    (else log-extraneous-event-count))))))
+   (default :ttl (rh_config "default_ttl")
+     (where* expired?
+             (where* #(not= "expired" (:state %))
+                     log-expired-count
+                     (else
+                      (apply sdo @watcher-streams)))
+             (else
+              (with :es_log_probability (rh_config "es_log_probability" 0.01)
+                    (test/io push-to-es))
+              (where* #(contains? interesting-metrics (:metric-name %))
+                      combined-stream
+                      (else log-extraneous-event-count)))))))
 
